--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,13 +4,15 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <uses-sdk android:minSdkVersion="8" />
+    <uses-sdk android:minSdkVersion="16" />
     <uses-permission android:name = "android.permission.WRITE_EXTERNAL_STORAGE"/>
     <application
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/icon"
         android:label="@string/app_name" >
         <activity
             android:name=".AndroidBuildingMusicPlayerActivity"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.DeviceDefault.NoActionBar"
             android:label="@string/app_name"
             android:configChanges="keyboardHidden|orientation">
             <intent-filter>
@@ -21,7 +23,10 @@
         </activity>
         
         <activity
-            android:name=".PlayListActivity" />
+            android:name=".PlayListActivity"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.DeviceDefault"
+            />
     </application>
 
 </manifest>
